# blog

./: .gitignore  blog.agda-lib  flake.nix  flake.nix.temp-old  test.html
.github/workflows/: build.yaml
notes/Main/: #20250109133324-osc_processes.org#  .#20250109133324-osc_processes.org  20250108124450-osc_intro.org  20250108124450-osc_intro.org~  20250108150447-interrupts.org  20250108150447-interrupts.org~  20250108150833-kernel_mode.org  20250109131446-system_call.org  20250109131446-system_call.org~  20250109133324-osc_processes.org  20250109133324-osc_processes.org~  20250115120051-multi_programming.org  20250115120051-multi_programming.org~  20250115121252-pcb.org  20250115121252-pcb.org~  20250115125552-process_schedulers.org  20250115125552-process_schedulers.org~  20250115143718-threads.org  20250115143718-threads.org~
pages/: NbE.hs  index.html  main.md
pages/MGS24/: SynthHom.lagda.tex  mgs.agda-lib
pages/agda/: 01-BicartesianClosed.lagda.md  CwR.lagda.md  Decision.lagda.md  Examples.lagda.md  Finite-linalg.lagda.md  LinearAlgNotes.lagda.md  RMod-Ab.agda  ShallowerDeep.lagda.md
pages/css/: Agda.css  default.css
pages/posts/: BicartesianClosed.lagda.md  F-algebras.md  LinearAlgNotes.lagda.md
pages/templates/: default.html
site/: LICENSE  blog.cabal
site/app/: Main.hs  Main.hs.old
