cabal-version:      3.0
name:               blog
version:            0.1.0.0
-- synopsis:
-- description:
author:             Sam Toth
maintainer:         sam@toth.co.uk
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wpartial-fields
                 -Wredundant-constraints
                 -O2
                 -threaded
                 -rtsopts
                 -with-rtsopts=-N


executable hakyll-site
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:   base == 4.*
                   , hakyll == 4.15.*
                   , filepath >= 1.0
                   , pandoc >= 2.11
                   , slugger >= 0.1.0.2
                   , text >= 1 && < 3

    hs-source-dirs:   app
    default-language: GHC2021
